style: fix alignment for account menu and github oauth buttons in header

--- a/src/css/AccountMenuAndOAuth.css
+++ b/src/css/AccountMenuAndOAuth.css
@@ -1,6 +1,6 @@
 /* See docs/css-style-guide.md */
 .github-login {
-  align-self: flex-end;
+  align-self: flex-start;
   margin-right: 3rem;
 }
 
